# ImageRetrieval

./: CMakeLists.txt  image_retrieval.sln
image_retrieval/: dft.cpp  dft.txt  euclid.cpp  file.cpp  image_retrieval.vcxproj  image_retrieval.vcxproj.filters  init.h  lbp.cpp  lbp.h  lbp_basic.txt  lbp_git.cpp  lbp_git.hpp  main.cpp
image_retrieval/info/: dft_22.csv  lbp_basic.csv
include/: dft.h  euclid.h  file.h  init.h  lbp.h  test.h
lib/: dft.cpp  euclid.cpp  file.cpp  init.cpp  lbp.cpp  test.cpp
test/: cMakeLists.txt  generate_n_point_min_map_for_rotate_lbp.cpp  main.cpp  test.cpp
